# advent_of_code

./: .gitignore  Makefile  README.md  create_puzzle.py
2019/: Cargo.toml
2020/: Cargo.toml  README.md  create_puzzle.py
2020/examples/puzzle_1/: main.rs
2020/examples/puzzle_10/: main.rs
2020/examples/puzzle_11/: main.rs
2020/examples/puzzle_12/: main.rs
2020/examples/puzzle_13/: main.rs
2020/examples/puzzle_14/: main.rs
2020/examples/puzzle_15/: main.rs
2020/examples/puzzle_16/: main.rs
2020/examples/puzzle_17/: main.rs
2020/examples/puzzle_18/: main.rs
2020/examples/puzzle_19/: main.py  main.rs
2020/examples/puzzle_2/: main.rs
2020/examples/puzzle_20/: find_sea_monsters.py  main.rs
2020/examples/puzzle_21/: main.rs
2020/examples/puzzle_22/: main.rs
2020/examples/puzzle_23/: main.rs
2020/examples/puzzle_24/: main.rs
2020/examples/puzzle_25/: main.rs
2020/examples/puzzle_3/: main.rs
2020/examples/puzzle_4/: main.rs
2020/examples/puzzle_5/: main.rs
2020/examples/puzzle_6/: main.rs
2020/examples/puzzle_7/: main.py  main.rs
2020/examples/puzzle_8/: main.rs
2020/examples/puzzle_9/: main.rs
2020/puzzle_1/src/: main.rs
2020/puzzle_2/src/: main.rs
2020/puzzle_3/src/: main.rs
2020/puzzle_4/: Cargo.toml
2020/puzzle_4/src/: main.rs
2020/puzzle_5/: Cargo.toml
2020/puzzle_5/src/: main.rs
2020/src/: main.rs
2021/puzzle_10_1/: main.py
2021/puzzle_10_2/: main.py
2021/puzzle_11_1/: main.py
2021/puzzle_11_2/: main.py
2021/puzzle_12_1/: main.py
2021/puzzle_12_2/: main.py
2021/puzzle_13_1/: main.py
2021/puzzle_13_2/: main.py
2021/puzzle_14_1/: main.py
2021/puzzle_14_2/: main.py
2021/puzzle_15_1/: main.py
2021/puzzle_15_2/: main.py
2021/puzzle_16/: main.py
2021/puzzle_16_1/: main.py
2021/puzzle_16_2/: main.py
2021/puzzle_17_1/: main.py
2021/puzzle_17_2/: main.py
2021/puzzle_18/: main.py
2021/puzzle_19/: main.py
2021/puzzle_1_1/: main.py
2021/puzzle_1_2/: main.py
2022/: Cargo.toml  README.md  create_puzzle.py
2022/examples/puzzle_1/: main.rs
2022/examples/puzzle_10/: main.rs
2022/examples/puzzle_11/: main.py  main.rs
2022/examples/puzzle_12/: main.rs
2022/examples/puzzle_13/: main.py  main.rs
2022/examples/puzzle_14/: main.rs
2022/examples/puzzle_15/: main.rs
2022/examples/puzzle_16/: main.rs
2022/examples/puzzle_17/: check_for_repetitions.py  main.rs
2022/examples/puzzle_18/: main.rs  minimal_example.txt  non_diagonal_example.txt
2022/examples/puzzle_19/: main.rs
2022/examples/puzzle_2/: main.rs
2022/examples/puzzle_20/: main.rs
2022/examples/puzzle_21/: main.rs
2022/examples/puzzle_22/: main.rs
2022/examples/puzzle_23/: main.rs
2022/examples/puzzle_24/: main.rs
2022/examples/puzzle_25/: main.rs
2022/examples/puzzle_3/: main.rs
2022/examples/puzzle_4/: main.rs
2022/examples/puzzle_5/: main.rs
2022/examples/puzzle_6/: main.rs
2022/examples/puzzle_7/: main.rs
2022/examples/puzzle_8/: main.rs
2022/examples/puzzle_9/: animation.py  main.rs
2023/: Makefile  Puzzle.java  README.md  puzzle.c  puzzle.clj  puzzle.cpp  puzzle.cs  puzzle.dart  puzzle.erl  puzzle.exs  puzzle.fsx  puzzle.go  puzzle.hs  puzzle.jl  puzzle.js  puzzle.kt  puzzle.lsp  puzzle.pl  puzzle.py  puzzle.r  puzzle.rb  puzzle.rs  puzzle.scala  puzzle.swift  puzzle.ts  puzzle.zig
2024/: README.md
2025/: Cargo.toml
2025/examples/puzzle_10/: main.rs
2025/examples/puzzle_11/: main.rs
2025/examples/puzzle_12/: main.rs
2025/examples/puzzle_2/: main.rs
2025/examples/puzzle_3/: main.rs
2025/examples/puzzle_4/: main.rs
2025/examples/puzzle_5/: main.rs
2025/examples/puzzle_6/: main.rs
2025/examples/puzzle_7/: main.rs
2025/examples/puzzle_8/: main.rs
2025/examples/puzzle_9/: main.rs
advent_of_code_utils_rust/: Cargo.toml
aoc_utils/: Cargo.toml
(+96 files in other folders)
