[package]
name = "advent_of_code_2020"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.10.2"
advent_of_code_utils_rust = { path = "../advent_of_code_utils_rust" }

[dev-dependencies]
rstest = "0.15.0"

[[example]]
name = "puzzle_1"

[[example]]
name = "puzzle_2"

[[example]]
name = "puzzle_3"

[[example]]
name = "puzzle_4"

[[example]]
name = "puzzle_5"

[[example]]
name = "puzzle_6"

[[example]]
name = "puzzle_7"

[[example]]
name = "puzzle_8"

[[example]]
name = "puzzle_9"

[[example]]
name = "puzzle_10"

[[example]]
name = "puzzle_11"

[[example]]
name = "puzzle_12"

[[example]]
name = "puzzle_13"

[[example]]
name = "puzzle_14"

[[example]]
name = "puzzle_15"
