[package]
name = "advent_of_code_2022"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.10.2"
lazy_static = "1.4.0"
regex = "1.6.0"

[dev-dependencies]
rstest = "0.15.0"

[[example]]
name = "puzzle_1"

[[example]]
name = "puzzle_2"

[[example]]
name = "puzzle_3"

[[example]]
name = "puzzle_4"

[[example]]
name = "puzzle_5"

[[example]]
name = "puzzle_6"
