[package]
name = "advent_of_code_2025"
version = "0.1.0"
edition = "2021"

[dependencies]

[dev-dependencies]
rstest = "0.15.0"

[[example]]
name = "puzzle_1"

[[example]]
name = "puzzle_2"

[[example]]
name = "puzzle_3"

[[example]]
name = "puzzle_4"

[[example]]
name = "puzzle_5"

[[example]]
name = "puzzle_6"

